# youtubechapters-backend

./: .gitignore  LICENSE  README.md  pyproject.toml
summary_app/: .dockerignore  Dockerfile  README.md  api.py  batch_summarize.py  db.py  download.py  fly.toml  main.py  md_shorten.py  md_summarize.py  md_summarize_claud.py  modal.py  modal_app.py  phrase_block.py  readme.md  requirements.txt  run.py  schema.py  segment.py  summarize.py  test.sh  transcribe.py  youtube.py  youtube_transcripts.py
timestamps_app/: Dockerfile  db.py  fly.toml  md_shorten.py  md_summarize.py  readme.md  requirements.txt  run.py  segment.py  transcribe.py
transcribe_app/: download.py  exploration.ipynb  modal_app.py  transcribe.py
vercel_impl/: api.py  app.py  phrase_block.py  requirements.txt  summarize.py  vercel.json  youtube_transcripts.py
